Fix select2 layout bug

--- a/views/assets/stylesheets/sorting-sortable-select-many/sorting-sortable-select-many.scss
+++ b/views/assets/stylesheets/sorting-sortable-select-many/sorting-sortable-select-many.scss
@@ -39,6 +39,7 @@ $color-black: "0,0,0";
     }
     /* select2 layout */
     .select2-container--default{
+        width: 100% !important;
         .select2-search--inline{
             float: none;
             &::after{
